<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_support_ticket_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:layout_marginBottom="@dimen/card_margin"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="right"
                android:layout_margin="@dimen/card_content_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="عنوان سوال"
                    android:id="@+id/txt_support_ticket_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_size_normal" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="@dimen/div_size"
                android:layout_height="match_parent"
                android:background="@color/colorBackground"></FrameLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_content_margin"
                    android:layout_marginRight="@dimen/card_content_margin"
                    android:layout_marginTop="@dimen/card_content_margin">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tracking_code"
                        android:ems="@integer/esm_small"
                        android:textSize="@dimen/txt_size_xmedium"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="کد رهگیری: "
                        android:id="@+id/txt_support_ticket_code"
                        android:textIsSelectable="false"
                        android:ems="@integer/esm_small"
                        android:textSize="@dimen/txt_size_xmedium"
                        android:layout_weight="1"
                        android:gravity="center_horizontal" />

                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/div_size"
                    android:background="@color/colorBackground" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_content_margin"
                    android:layout_marginRight="@dimen/card_content_margin">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:ems="@integer/esm_small"
                        android:textSize="@dimen/txt_size_xmedium"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="تاریخ: "
                        android:ems="@integer/esm_small"
                        android:id="@+id/txt_support_ticket_date"
                        android:textSize="@dimen/txt_size_xmedium"
                        android:layout_weight="1"
                        android:gravity="center_horizontal" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/div_size"
                    android:background="@color/colorBackground" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/card_content_margin"
                    android:layout_marginLeft="@dimen/card_content_margin">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:ems="@integer/esm_small"
                        android:textSize="@dimen/txt_size_xmedium"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="وضعیت: "
                        android:ems="@integer/esm_small"
                        android:id="@+id/txt_support_ticket_status"
                        android:textSize="@dimen/txt_size_xmedium"
                        android:layout_weight="1"
                        android:gravity="center_horizontal" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/div_size"
                    android:background="@color/colorBackground" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/card_content_margin"
                    android:layout_marginLeft="@dimen/card_content_margin">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/priority"
                        android:ems="@integer/esm_small"
                        android:textSize="@dimen/txt_size_xmedium"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="اولویت"
                        android:ems="@integer/esm_small"
                        android:id="@+id/txt_support_tiket_priority"
                        android:textSize="@dimen/txt_size_xmedium"
                        android:layout_weight="1"
                        android:gravity="center_horizontal" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/div_size"
                    android:background="@color/colorBackground"></FrameLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_content_margin"
                    android:layout_marginRight="@dimen/card_content_margin"
                    android:layout_marginBottom="@dimen/card_content_margin">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/result"
                        android:ems="@integer/esm_small"
                        android:textSize="@dimen/txt_size_xmedium"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="نتیجه"
                        android:ems="@integer/esm_small"
                        android:id="@+id/txt_support_tiket_result"
                        android:textSize="@dimen/txt_size_xmedium"
                        android:layout_weight="1"
                        android:gravity="center_horizontal" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>